Adds and displays image and tittle/header on html page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Browser extension</title>
 </head>
-<body>
+<body class="container">
+    <img src="./images/plants-people.png" alt="plants and people">
+    <div>
+        <h1>Welcome to Your Personal Carbon Trigger!</h1>
+    </div>
+    <!--Form area -->
     <form action="" class="form-data" autocomplete="on">
         <div>
             <h2>New? Add your information</h2>
@@ -22,6 +27,8 @@
         <button class="search-btn">Submit</button>
     </form>
 
+
+    <!--Result area -->
     <div class="result">
         <div class="loading">Loading...</div>
         <div class="errors"></div>
