adds manifest file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Browser extension</title>
+    <title>My Carbon Trigger</title>
 </head>
 <body class="container">
     <img src="./images/plants-people.png" alt="plants and people">
