--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Carbon Trigger</title>
+    <link rel="stylesheet" href="./styles.css" />
 </head>
 <body class="container">
     <img src="./images/plants-people.png" alt="plants and people">
     <div>
         <h1>Welcome to Your Personal Carbon Trigger!</h1>
     </div>
+    
     <!--Form area -->
     <form action="" class="form-data" autocomplete="on">
         <div>
@@ -40,5 +42,7 @@
         </div>
         <button class="clear-btn">Change region</button>
     </div>
+
+    <script src="./main.js"></script>
 </body>
 </html>
